--- a/sass/_generic.scss
+++ b/sass/_generic.scss
@@ -10,7 +10,7 @@
 
 
 .full-width{
-    width: calc(100vw - #{$scroll-bar-width});
+    width: 100vw;
     position: relative;
     left: 50%;
     right: 50%;
