--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -5,8 +5,11 @@
     }
 
     &-main.stuck{
+        position: fixed;
+        width: 100%;
+        top: 0;
+        z-index: 5000;
         .navbar-brand{
-            width: 40px;
             opacity: 1;
         } 
     }
