--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,6 +1,7 @@
 html, body {
     width: 100%;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 body{
