--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -26,5 +26,3 @@ $container-max-widths: (
 
 $font-size-base: 1.1875rem;
 $small-font-size: 15px;
-
-$scroll-bar-width: 12px;
